# PROYECTO-PINF

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE.md  README.md  constants.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  subAN.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
Modern/Comun/: LeeDE440.py  funciones.py
Modern/SemiDiametroSol/: SDSol.py
Modern/estrellas/: PasoMeGr.py  prepaes.py
Modern/src/paginas_an/: ortoocasoluna.py
PAGINAS_ANEW/: LeeDE440.py  comunesAN.py  constants.py  coordena.py  faseluna.py  subAN.py  test_fasenewt.py  test_integracion.py  test_subAn.py
Tests/: README.md
legacy/Almanaque Nautico/: Estrellas AN.xlsx  EstrellasAN.rtf
legacy/Almanaque Nautico/ParalajesMarte/: LeeDE200.f  driMarte.f  funcione.f
legacy/Almanaque Nautico/ParalajesVenus/: LeeDE200.f  driVenus.f
legacy/Almanaque Nautico/UsoAnoSiguiente/: FunVarias.f  LeeDE200.f
legacy/Almanaque Nautico/estrellas/: estANFK5-Hipp.txt
modern/: app.py  web_app.py
modern/src/estrellas/: DOCUMENTACION.md  FORMULAS.md  LeeDE440.py  PasoMeGr.py  README.md  ReduEstr.py  calculos.py  estAN_UH.txt  herramientas_legacy.py  main.py  main_estrella.py  prepaes.py  prueba.py
modern/src/fase_luna/: faseLuna.py
modern/src/paginas_an/: fichDatAN.py  magnit.py  ortoocasol.py  ortoocasoluna.py  pagEntera.py  pagLatex.py
modern/src/paralajes_v_m/: VenusMarte.py
modern/src/polar/: DOCUMENTACION.md  FORMULAS.md  README.md  main_polar.py  prueba.py
modern/src/semi_diametro_sol/: SDSol.py
(+855 files in other folders)
