[project]
name = "almanaque_nautico_roa"
version = "0.1.0"
description = "Cálculo de posiciones planetarias y efemérides astronómicas"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "jplephem>=2.23",
    "skyfield>=1.53",
    "numpy",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "requests>=2.32.5",
]
